# text2sql_pipeline

./: .env.example  .gitignore  README.md  improvement_plan.md  improvement_plan_v2.md  plan.md  project_improvement_report.md  pyproject.toml  requirements.txt
data/samples/: glossary.csv  sql_logs.json
docker/: README.md  docker-compose.yml
docs/: 1. review_with_skt_case__v2.md  csv_formatted_plan.csv  pipeline_design_draft.md
experiments/: exp1.md  test_sql_similarity.py  test_table_description_prompt.py
experiments/sample_data/: column_registry_samples.json  sample_sqls_for_tables.json  sample_table_data.json  table_registry_samples.json
samples/: config.py
scripts/: delete_milvus_collection.py  demo_components.py  demo_sqlglot_normalization.py  reset_data.py  run_pipeline.py
scripts/schema_linking_strategies/: __init__.py  base.py  test_bidirectional_linking.py  test_hybrid_search.py  test_joinability_score.py  test_llm_filtering.py  test_rag_augmentation.py
src/text2sql/: __init__.py
src/text2sql/adapters/: __init__.py
src/text2sql/adapters/database/: __init__.py  oracle_adapter.py
src/text2sql/adapters/llm/: __init__.py  (+1 more)
src/text2sql/core/: __init__.py  config.py  models.py
src/text2sql/offline/: __init__.py  pipeline.py
tests/: __init__.py  conftest.py
tests/unit/: __init__.py
tests/unit/adapters/: __init__.py  test_es_adapter.py  test_milvus_adapter.py  test_openai_client.py  test_oracle_adapter.py
tests/unit/core/: __init__.py  test_config.py  test_models.py  test_smoke.py
tests/unit/offline/: __init__.py  test_pipeline.py
(+31 files in other folders)
