[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text2sql"
version = "0.1.0"
description = "Text2SQL 오프라인 파이프라인"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Team" }
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langchain-openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["src/text2sql"]

